# webscraper_using_heap_snapshots

./: .gitignore  .gitmodules  HPScraper.py  README.md  main.py  setup.py
parser/: .gitignore  CMakeLists.txt  example.py  setup.py
parser/heap_snapshot_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
parser/include/: interface.h
parser/src/: bindings.cpp  interface.cpp
